--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
   --bleu-ocean: #0277BD;       /* Secondaires / contrastes */
   --noir-ardoise: #333333;     /* Texte principal */
   --bleu-ocean-marine: #014F86;
+  --bandeau: #014F86;
 }
 
 /* ===== Reset global ===== */
@@ -42,7 +43,17 @@ body {
   padding-top: 200px;  /* Compense la bannière fixe + menu */
   padding-bottom: 0px; /* Compense le footer fixe */
 }
-
+body.pizza {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: url("images/fond-pizza.jpg") no-repeat center center fixed;
+  background-size: cover;   /* l’image remplit toujours tout l’écran */
+  background-attachment: fixed; /* l’image reste fixe au scroll */
+  background-position: center;  /* toujours centrée */
+  color: var(--bleu-ocean);
+  padding-top: 200px;  /* Compense la bannière fixe + menu */
+  padding-bottom: 0px; /* Compense le footer fixe */
+}
 
 /* ===== Bannière ===== */
 header.banner {
@@ -156,6 +167,22 @@ nav a:hover {
   color: var(--blanc);
   transform: translateY(-3px);
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
+.bg-marbre {
+  background: 
+    radial-gradient(circle at 20% 30%, rgba(255,255,255,0.6), transparent 40%),
+    radial-gradient(circle at 70% 60%, rgba(255,255,255,0.4), transparent 50%),
+    linear-gradient(135deg, var(--bandeau), #1c60b3, #477fc2);
+  background-size: 300% 200%;
+  transition: background 25s ease;
+}
+.bg-marbre-footer {
+  background: 
+    radial-gradient(circle at 20% 30%, rgba(255,255,255,0.6), transparent 40%),
+    radial-gradient(circle at 70% 60%, rgba(255,255,255,0.4), transparent 50%),
+    linear-gradient(135deg, var(--bandeau), #1c60b3, #477fc2);
+  background-size: 300% 200%;
+  transition: background 25s ease;
 }
 
 /* Style pour le lien sans couleur bleue ni soulignement */
@@ -400,7 +427,7 @@ footer {
   position: relative;
   width: 100%;
   text-align: center;
-  padding: 10px 15px;
+  padding: 5px 15px;
   background: var(--rouge-bordeaux);
   color: var(--beige-sable);
   margin-top: 40px;
